--- a/client/src/CSS/chatContain.css
+++ b/client/src/CSS/chatContain.css
@@ -28,6 +28,8 @@
     padding:4px 8px;
     /* margin-bottom:5px; */
     font-size: 1.1rem;
+    max-width: 100%;
+    word-wrap: break-word;
 }
 .msg-time
 {
